--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "karan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
@@ -18,6 +19,8 @@
     "express": "^5.2.1",
     "express-session": "^1.19.0",
     "mongodb": "^7.1.0",
-    "mongoose": "^9.2.1"
+    "mongoose": "^9.2.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
